@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-20 20:44:29 GMT	John Goerzen <jgoerzen@complete.org>	patch-105
+
+    Summary:
+      Checkpointing (compiles)
+    Revision:
+      missingh--head--0.7--patch-105
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/IO/HVFS/InstanceHelpers.hs
+
+
 2004-12-20 20:18:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-104
 
     Summary:
